Format all java files and add format command